--- a/bolt.html
+++ b/bolt.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/bolt.css">
 </head>
 <body>
+    <form action="">
+        <label for="email" class="label__header">Email</label>
+        <input type="email" id="email" placeholder="Email" class="input">
+        <label for="number" class="label__header">Phone number</label>
+        <input type="text" id="number" placeholder="phone" class="input">
+
     
+            <label for="country class="label__header">City</label>
+            <select id="country" class="input input--stretched">
+                <option value=" ">Lagos</option>
+                <option value="">Accra</option>
+            </select>
+
+            <input type="checkbox" id="checkbox">
+            <label for="checkbox" class="l__checkbox">
+                I agree to Bolt's 
+                <a class="link">terms of service</a> 
+                and 
+                <span class="link">privacy policy</span>
+            </label>
+        
+            <button class="btn btn--block">Become a driver with bolt</button>
+
+    </form>
 </body>
 </html>
