updating the dropdown list

--- a/bolt.html
+++ b/bolt.html
@@ -46,8 +46,8 @@
             
                   <label for="country class="label__header">City</label>
                   <select id="country" class="input input--stretched">
-                      <option value=" ">+327</option>
-                      <option value="">Njoku</option>
+                      <option value=" ">Lagos</option>
+                      <option value="">Accra</option>
                   </select>
                   <input type="checkbox" id="checkbox" class="checkbox">
                   <label for="checkbox" class="l__checkbox">
